--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,14 @@
-[workspace]
-members = ["crates/*"]
-resolver = "2"
+[package]
+name = "webidl-utils"
+version = "0.1.0"
+authors = ["Samantha Nguyen <contact@samanthanguyen.me>"]
+description = "A crate of utilities for working with the WebIDL AST, by extending weedle2"
+readme = "README.md"
+license = "MIT OR Apache-2.0"
+edition = "2021"
+keywords = [
+	"webidl"
+]
+
+[dependencies]
+weedle2 = "5.0.0"
